# hello_conan

./: CMakeLists.txt  build.py  conanfile.py
cmake/: ProjectSettings.cmake
include/: world.h
src/: main.cpp  world.cpp
testsuite/: CMakeLists.txt
testsuite/src/: a_test.cpp
